[project]
name = "wolfi-cuda-base-image"
version = "1.0.0"
description = "Build lightweight CUDA-enabled Docker images based on Wolfi Linux"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
